Add .gitignore and enhance project structure with core modules for repo-analyzer
- Introduced .gitignore to exclude unnecessary files and directories.
- Updated pyproject.toml to specify the correct entry point for the CLI.
- Added main entry point script (repo_analyzer.py) and core modules for AI documentation generation, dependency parsing, evidence generation, and security analysis.
- Implemented CLI for repository analysis and evidence pack creation.
- Enhanced README.md for clarity and consistency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
 ]
 
 [project.scripts]
-repo-analyzer = "cli:main"
+repo-analyzer = "repo_analyzer.cli:main"
 
 [tool.setuptools]
 packages = ["repo_analyzer"]
+
